[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cryptography-methods"
version = "1.0.0"
description = "An interactive CLI toolkit implementing seven classical and modern cryptographic algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Astyan Martin"},
]
dependencies = [
    "colorama>=0.4.0",
]

[project.scripts]
cryptography-methods = "cryptography_methods.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
